<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/security_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16_dp"
        android:id="@+id/pinkcard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        app:cardBackgroundColor="#ed7079"
        app:cardCornerRadius="@dimen/dimen_16_dp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        app:layout_constraintTop_toBottomOf="@id/security_txt"  />

    <TextView
        android:id="@+id/sos_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pinkcard"
        app:layout_constraintTop_toTopOf="@id/pinkcard" />

    <TextView
        android:id="@+id/sos_mess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/in_case_of_emergency_keep_telling_family_members_to_contact_me"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pinkcard"
        app:layout_constraintTop_toBottomOf="@id/sos_text" />

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="@dimen/dimen_100_dp"
        android:layout_height="@dimen/dimen_100_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pinkcard"
        app:layout_constraintEnd_toEndOf="@id/pinkcard"
        app:layout_constraintTop_toTopOf="@id/pinkcard" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimen_16_dp"
        android:id="@+id/greencard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        app:cardBackgroundColor="@color/guard_green_Color"
        app:cardCornerRadius="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@id/pinkcard" />

    <TextView
        android:id="@+id/guard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/greencard"
        app:layout_constraintTop_toTopOf="@id/greencard" />

    <TextView
        android:id="@+id/guard_mess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:text="@string/open_when_you_are_potantially_dangarous_journey"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/greencard"
        app:layout_constraintTop_toBottomOf="@id/guard_text" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimen_100_dp"
        android:layout_height="@dimen/dimen_100_dp"
        android:layout_margin="@dimen/dimen_16_dp"
        android:elevation="@dimen/dimen_16_dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/greencard"
        app:layout_constraintEnd_toEndOf="@id/greencard"
        app:layout_constraintTop_toTopOf="@id/greencard"/>

</androidx.constraintlayout.widget.ConstraintLayout>